--- a/src/ProfilePageUI/home.css
+++ b/src/ProfilePageUI/home.css
@@ -1,34 +1,33 @@
-.Home{
-    background-color: blueviolet;
+.Profile{
     height: 100%;
-    flex-direction: row
+    flex-direction: row;
 }
 
 .Header{
     flex: 10%;
     display: flex;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 .Title{
     flex: 10%;
     display: flex;
-    background-color: gold;
-    justify-content: center;
+    /* justify-content: center; */
     margin-top: 0;
     margin-bottom: 0;
+    padding: 16px;
 }
 
 .ContentBar{
     display: flex;
     flex: 40%;
-    background-color: chocolate;
+    /* background-color: chocolate; */
 }
 
 .Footer{
     display: flex;
     flex: 10%;
-    background-color: white;
+    /* background-color: white; */
     align-items: center;
     justify-content: center;
 }
