--- a/src/SearchUI/home.css
+++ b/src/SearchUI/home.css
@@ -1,7 +1,7 @@
-.Home{
+.Search{
     background-color: blueviolet;
     height: 100%;
-    flex-direction: row
+    flex-direction: row;
 }
 
 .Header{
