--- a/src/SearchUI/home.css
+++ b/src/SearchUI/home.css
@@ -1,37 +1,33 @@
 .Search{
-    background-color: blueviolet;
     height: 100%;
-    flex-direction: row;
+    flex-direction: column;
+    display: flex;
+
 }
 
-.Header{
-    flex: 10%;
+.SHeader{
     display: flex;
-    background-color: aquamarine;
 }
 
 .SearchBar{
     display: flex;
-    flex: 20%;
-    background-color: bisque;
+    flex: 1;
 }
 
-.AdvancedSearch{
+/* .AdvancedSearch{
     display: flex;
     flex: 20%;
-    background-color: wheat;
 }
 
 .ContentBar{
     display: flex;
     flex: 40%;
-    background-color: whitesmoke;
-}
+    width: 100%;
+    height: 100%;
+} */
 
-.Footer{
+.SFooter{
     display: flex;
-    flex: 10%;
-    background-color: white;
     align-items: center;
     justify-content: center;
 }
