--- a/src/MapUI/home.css
+++ b/src/MapUI/home.css
@@ -1,4 +1,4 @@
-.mapContainer{
+/* .mapContainer{
     // overflow: hidden;
     height: 100%;
     // border: solid red;
@@ -14,4 +14,10 @@ button{
         width: 20px;
         height: 20px;
     }
+} */
+
+.mapContainer{
+    height: 100%;
 }
+
+
