--- a/src/NetworkUI/home.css
+++ b/src/NetworkUI/home.css
@@ -1,23 +1,20 @@
 .Network{
     display: flex;
     flex: row;
-    height: 100%
+    height: 100%;
+    background-color: cadetblue;
 }
 .SidePanel{
-    flex:0%;
-    height: 100%;
-    transition: all 0.8s ease-in-out;
+    transition: all 2s ease-in-out;
+    background-color: bisque;
 }
 
 .SidePanel.expanded{
-    flex:20%;
-    height: 100%
+    flex:1;
 }
 
 .ContentBar{
-    flex:100%;
-    height: 100%;
-
+    flex:3;
 }
 
 
