--- a/src/MapUI/FilterContainer.scss
+++ b/src/MapUI/FilterContainer.scss
@@ -2,3 +2,54 @@ Form{
     position: absolute;
     color: white
 }
+
+.filterContainer{
+    position: absolute;
+    color: white;
+    bottom:0;
+    padding-bottom: 10%
+}
+
+.siteTypeClick{
+    cursor: pointer;
+}
+
+.siteTypeClick.active{
+    font-weight: bolder;
+    stroke: black;
+}
+
+.pointer{
+    height: 25px;
+    width: 23px;
+    
+}
+
+.pointer-1{
+    fill: rgb(76, 0, 153)
+}
+.pointer-2{
+    fill:rgb(204,204, 0)
+}
+.pointer-3{
+    fill:rgb(0, 0, 180)
+    
+}
+.pointer-4{
+    fill:rgb(255, 128, 0)
+    
+}
+.pointer-5{
+    fill:rgb(255, 0, 0)
+    
+}
+.pointer-6{
+    fill:rgb(229, 242, 229)
+    
+}
+.pointer-7{
+    fill:rgb(0, 153, 0)    
+}
+
+
+
