Added Tab info and filter in map

--- a/src/MapUI/FilterContainer.scss
+++ b/src/MapUI/FilterContainer.scss
@@ -17,6 +17,9 @@ Form{
 .siteTypeClick.active{
     font-weight: bolder;
     stroke: black;
+    // transform: translateX(5px) scale(1); 
+    // font-size: 10px; 
+    //  color: #530e85;
 }
 
 .pointer{
