changes to map ui

--- a/src/MapUI/panels/Panel.scss
+++ b/src/MapUI/panels/Panel.scss
@@ -41,10 +41,10 @@
   }
 
   .panel-right {
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    // height: 500px;
     /* max-height: 500px; */
-    overflow: scroll;
+    // overflow: scroll;
     overflow-x: hidden;
 
     // min-width: 300px;
