--- a/src/MapUI/tabs/tabs.scss
+++ b/src/MapUI/tabs/tabs.scss
@@ -80,3 +80,14 @@ a {
     display: flex;
     flex-direction: column;
 }
+
+.read-more-button {
+    color: red;
+}
+
+img{
+    width: 400px;
+    height: 200px;
+}
+
+
